# Forth-like-Interpreter

./: CMakeLists.txt  README.md
src/: commands.cpp  commands.hpp  commandslist.cpp  interpreter.cpp  interpreter.hpp  interpretererror.hpp  main.cpp  mystack.cpp  mystack.hpp  testsforth.cpp
